--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "archilex/filament-toggle-icon-column": "^3.1",
         "bezhansalleh/filament-language-switch": "^3.1",
         "filament/filament": "^3.2",
         "hasnayeen/themes": "^3.0",
@@ -16,7 +17,8 @@
         "laravel-frontend-presets/tall": "^8.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "ysfkaya/filament-phone-input": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
@@ -49,7 +51,8 @@
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
             "@php artisan ide-helper:generate",
-            "@php artisan ide-helper:meta"
+            "@php artisan ide-helper:meta",
+            "./vendor/bin/pint"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
