--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "shuvroroy/filament-spatie-laravel-backup": "^2.2",
         "ysfkaya/filament-phone-input": "^2.3"
     },
     "require-dev": {
