--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "pxlrbt/filament-activity-log": "^1.1",
+        "saade/filament-laravel-log": "^3.0",
         "shuvroroy/filament-spatie-laravel-backup": "^2.2",
         "shuvroroy/filament-spatie-laravel-health": "^2.0",
         "spatie/laravel-activitylog": "^4.8",
