--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "shuvroroy/filament-spatie-laravel-health": "^2.0",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/security-advisories-health-check": "^1.2",
+        "swisnl/filament-backgrounds": "^1.1",
         "ysfkaya/filament-phone-input": "^2.3"
     },
     "require-dev": {
