--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -8,6 +8,8 @@ jobs:
 
         runs-on: ubuntu-latest
 
+        continue-on-error: true
+
         steps:
             - uses: actions/checkout@v3
 
