--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,6 @@
 name: Laravel Tests
 
-on:
-    push:
-        branches: ["master"]
-    pull_request:
-        branches: ["master"]
+on: [push, pull_request]
 
 jobs:
     laravel-tests:
