--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,39 +1,50 @@
-name: Laravel Tests
+name: Tests and Code Analysis
 
 on: [push, pull_request]
 
 jobs:
     laravel-tests:
         name: PHPUnit
-
         runs-on: ubuntu-latest
-
+        strategy:
+            fail-fast: false
+            matrix:
+                php-version: ["7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
         steps:
-            - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+            - uses: shivammathur/setup-php@v2
               with:
-                  php-version: "8.2"
-
+                  php-version: ${{ matrix.php-version }}
             - uses: actions/checkout@v4
-
             - name: Copy .env
               run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
             - name: Install Dependencies
               run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
             - name: Generate key
               run: php artisan key:generate
-
             - name: Directory Permissions
-              run: chmod -R 777 storage bootstrap/cache
-
+              run: chmod -R 755 storage bootstrap/cache
             - name: Create Database
               run: |
                   mkdir -p database
                   touch database/database.sqlite
-
-            - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+            - name: Execute tests (Unit and Feature tests) via PHPUnit
               env:
                   DB_CONNECTION: sqlite
                   DB_DATABASE: database/database.sqlite
               run: ./vendor/bin/phpunit
+
+    phpstan:
+        name: PHPStan
+        runs-on: ubuntu-latest
+        continue-on-error: true
+        steps:
+            - uses: actions/checkout@v4
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
+              with:
+                  php-version: "8.2"
+                  coverage: none
+            - name: Install composer dependencies
+              run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+            - name: Run Static Analysis
+              run: ./vendor/bin/phpstan --error-format=github --memory-limit=2G
