--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,17 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+YANDEXGPT_FODER_ID=
+YANDEXGPT_IAM_TOKEN=
+YANDEXGPT_FINETUNED_MODEL=
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_URL=
+
+OCTANE_SERVER=swoole
+
+REVERB_HOST=
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
