--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "@tailwindcss/forms": "^0.5",
         "@tailwindcss/typography": "^0.5",
         "autoprefixer": "^10.4",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
+        "pusher-js": "^8.4.0-rc2",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.3",
         "sass-loader": "^8.0",
