--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=StockSync
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -19,20 +19,20 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=sellersphere_filament
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=stocksync
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
+SESSION_LIFETIME=12000
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -55,10 +55,18 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+YANDEXGPT_FODER_ID=
+YANDEXGPT_IAM_TOKEN=
+YANDEXGPT_FINETUNED_MODEL=
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_URL=
+
+OCTANE_SERVER=swoole
+
+REVERB_HOST=
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
 
 VITE_APP_NAME="${APP_NAME}"
