octane switched to frankenphp

--- a/.env.example
+++ b/.env.example
@@ -62,7 +62,7 @@ YANDEXGPT_FINETUNED_MODEL=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_WEBHOOK_URL=
 
-OCTANE_SERVER=swoole
+OCTANE_SERVER=frankenphp
 
 REVERB_HOST=
 REVERB_APP_ID=
