--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "predis/predis": "^2.2",
         "pxlrbt/filament-activity-log": "^1.1",
         "saade/filament-laravel-log": "^3.0",
         "shuvroroy/filament-spatie-laravel-backup": "^2.2",
