--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,14 @@ services:
             mysql:
                 condition: service_healthy
 
+    mailpit:
+        image: "axllent/mailpit:latest"
+        ports:
+            - "${FORWARD_MAILPIT_PORT:-1025}:1025"
+            - "${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025"
+        networks:
+            - sail
+
 networks:
     sail:
         driver: bridge
