--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,11 @@ services:
         networks:
             - sail
         depends_on:
-            - mysql
+            mysql:
+                condition: service_healthy
+            redis:
+                condition: service_healthy
+
     mysql:
         image: "mysql/mysql-server:8.0"
         ports:
@@ -50,9 +54,28 @@ services:
                 - "-p${DB_PASSWORD}"
             retries: 3
             timeout: 5s
+
+    redis:
+        image: "redis:alpine"
+        ports:
+            - "${FORWARD_REDIS_PORT:-6379}:6379"
+        volumes:
+            - "sail-redis:/data"
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - redis-cli
+                - ping
+            retries: 3
+            timeout: 5s
+
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mysql:
+        driver: local
+    sail-redis:
         driver: local
