--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,11 +2,6 @@ FROM php:8.2-fpm
 
 LABEL Anton Vix <https://github.com/vix-4800>
 
-ARG UID=1000
-ARG GID=1000
-
-WORKDIR /var/www/html
-
 RUN apt update && \
     apt install -y openssl zip unzip libzip-dev libicu-dev
 
@@ -15,7 +10,7 @@ RUN docker-php-ext-install pdo pdo_mysql zip intl
 
 RUN apt clean && rm -rf /var/lib/apt/lists/*
 
-# RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 EXPOSE 9000
 CMD ["php-fpm"]
